# DaddyBayes

./: README.md  log.md  pyproject.toml  setup.cfg
src/daddyBayes/: multiVarSenti.py  naiveBayes.py  test.py
