[metadata]
name = daddyBayes
version = 0.0.1
author = arctesian
author_email = me@danielokita.com
description = Another pkg I made because of a bug I don't understand
long_description = file: README.md
long_description_content_type = text/markdown
    url = https://github.com/TheArctesian/NaiveBayes-Classifer
project_urls =
    Bug Tracker = https://github.com/TheArctesian/NaiveBayes-Classifer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
